feat: implement core bakery management system including POS, inventory, reporting, and role-based authentication modules